--- a/index.html
+++ b/index.html
@@ -434,15 +434,119 @@
                 max-width: 1400px;
             }
         }
+        /* Alpine.js Animations */
+        [x-cloak] { display: none !important; }
+
+        /* Mobile Menu */
+        .mobile-menu-btn {
+            display: none;
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 0.5rem;
+            z-index: 1001;
+        }
+
+        .mobile-menu-btn span {
+            display: block;
+            width: 25px;
+            height: 2px;
+            background: #000;
+            margin: 5px 0;
+            transition: all 0.3s;
+        }
+
+        .mobile-menu {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 80%;
+            max-width: 350px;
+            height: 100vh;
+            background: #E8DFD0;
+            transition: right 0.3s ease;
+            z-index: 999;
+            padding: 5rem 2rem 2rem;
+            box-shadow: -5px 0 20px rgba(0,0,0,0.1);
+        }
+
+        .mobile-menu.open {
+            right: 0;
+        }
+
+        .mobile-menu-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.5);
+            display: none;
+            z-index: 998;
+        }
+
+        .mobile-menu-overlay.show {
+            display: block;
+        }
+
+        @media (max-width: 768px) {
+            .mobile-menu-btn {
+                display: block;
+            }
+
+            .nav-cta {
+                display: none;
+            }
+        }
+
+        /* Fade in animation */
+        .fade-in {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.6s ease-out;
+        }
+
+        .fade-in.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* Scale animation */
+        .scale-in {
+            transform: scale(0.9);
+            opacity: 0;
+            transition: all 0.5s ease-out;
+        }
+
+        .scale-in.visible {
+            transform: scale(1);
+            opacity: 1;
+        }
     </style>
 </head>
-<body>
+<body x-data="landingPage()" x-init="init()">
     <nav>
         <div class="logo">
             <img src="logo.png" alt="The Simple Company">
         </div>
         <a href="javascript:void(0)" class="nav-cta" data-cal-link="team/simple" data-cal-config='{"layout":"month_view"}'>Book a Call</a>
+
+        <!-- Mobile Menu Button -->
+        <button class="mobile-menu-btn" @click="mobileMenuOpen = !mobileMenuOpen">
+            <span :style="mobileMenuOpen && 'transform: rotate(45deg) translateY(7px)'"></span>
+            <span :style="mobileMenuOpen && 'opacity: 0'"></span>
+            <span :style="mobileMenuOpen && 'transform: rotate(-45deg) translateY(-7px)'"></span>
+        </button>
     </nav>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu" :class="{'open': mobileMenuOpen}">
+        <a href="#services" @click="mobileMenuOpen = false" style="display: block; padding: 1rem 0; font-size: 1.2rem; color: #000; text-decoration: none;">Services</a>
+        <a href="#proof" @click="mobileMenuOpen = false" style="display: block; padding: 1rem 0; font-size: 1.2rem; color: #000; text-decoration: none;">Results</a>
+        <a href="#contact" @click="mobileMenuOpen = false" style="display: block; padding: 1rem 0; font-size: 1.2rem; color: #000; text-decoration: none;">Contact</a>
+        <a href="javascript:void(0)" data-cal-link="team/simple" data-cal-config='{"layout":"month_view"}' style="display: inline-block; margin-top: 2rem; padding: 1rem 2rem; background: #000; color: #fff; border-radius: 2rem; text-decoration: none;">Book a Call</a>
+    </div>
+    <div class="mobile-menu-overlay" :class="{'show': mobileMenuOpen}" @click="mobileMenuOpen = false"></div>
 
     <!-- Cal.com Embed Script -->
     <script>
@@ -456,15 +560,15 @@
     Cal("ui", {"styles":{"branding":{"brandColor":"#000000"}},"hideEventTypeDetails":false,"layout":"month_view"});
     </script>
 
-    <section class="hero">
-        <h1>
+    <section class="hero" x-data="{ shown: false }" x-init="setTimeout(() => shown = true, 100)">
+        <h1 :class="{'fade-in visible': shown}" class="fade-in">
             Let AI Qualify.
             <span>Let Reps Close.</span>
         </h1>
-        <p class="hero-subtitle">
+        <p class="hero-subtitle fade-in" :class="{'visible': shown}" style="transition-delay: 0.2s">
             AI agents warm up every lead. Your reps focus on deals that convert.
         </p>
-        <div class="scroll-hint">Scroll to explore ↓</div>
+        <div class="scroll-hint" x-show="shown" x-transition.duration.1000ms>Scroll to explore ↓</div>
     </section>
 
     <div class="ticker-section">
@@ -484,10 +588,10 @@
         </div>
     </div>
 
-    <section class="services">
-        <h2 class="section-title">What You Get</h2>
+    <section class="services" id="services">
+        <h2 class="section-title fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">What You Get</h2>
         <div class="service-grid">
-            <div class="service-card">
+            <div class="service-card fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">
                 <div class="service-number">01</div>
                 <h3>Instant Lead Response</h3>
                 <p>Stop losing deals to competitors who respond faster. AI answers every inquiry in under 60 seconds.</p>
@@ -500,7 +604,7 @@
                 <div class="service-price">$4,500 | Live in 3 days</div>
             </div>
 
-            <div class="service-card">
+            <div class="service-card fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element" style="transition-delay: 0.1s">
                 <div class="service-number">02</div>
                 <h3>Smart Lead Qualification</h3>
                 <p>Your AI agent knows what questions to ask. Only qualified prospects reach your calendar.</p>
@@ -513,7 +617,7 @@
                 <div class="service-price">$5,500 | Live in 5 days</div>
             </div>
 
-            <div class="service-card">
+            <div class="service-card fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element" style="transition-delay: 0.2s">
                 <div class="service-number">03</div>
                 <h3>24/7 Pipeline Builder</h3>
                 <p>Never miss another lead. Your AI works nights, weekends, and holidays—no vacations, no sick days.</p>
@@ -528,10 +632,10 @@
         </div>
     </section>
 
-    <section class="proof">
-        <h2 class="section-title">Real Impact, Not Hype</h2>
+    <section class="proof" id="proof">
+        <h2 class="section-title fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">Real Impact, Not Hype</h2>
         <div class="proof-grid">
-            <div class="proof-stat">
+            <div class="proof-stat scale-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">
                 <div class="proof-stat-number">7%</div>
                 <div class="proof-stat-label">average revenue increase per deal</div>
             </div>
