--- a/index.html
+++ b/index.html
@@ -639,15 +639,15 @@
                 <div class="proof-stat-number">7%</div>
                 <div class="proof-stat-label">average revenue increase per deal</div>
             </div>
-            <div class="proof-stat">
+            <div class="proof-stat scale-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element" style="transition-delay: 0.1s">
                 <div class="proof-stat-number">4x</div>
                 <div class="proof-stat-label">more deals closed with instant follow-up</div>
             </div>
-            <div class="proof-stat">
+            <div class="proof-stat scale-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element" style="transition-delay: 0.2s">
                 <div class="proof-stat-number">91%</div>
                 <div class="proof-stat-label">higher retention with omnichannel engagement</div>
             </div>
-            <div class="proof-stat">
+            <div class="proof-stat scale-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element" style="transition-delay: 0.3s">
                 <div class="proof-stat-number">60s</div>
                 <div class="proof-stat-label">response time wins 78% of deals</div>
             </div>
@@ -670,20 +670,68 @@
     </footer>
 
     <script>
-        // Smooth scroll for anchor links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+        // Alpine.js Components
+        function landingPage() {
+            return {
+                mobileMenuOpen: false,
+                init() {
+                    // Close mobile menu on escape key
+                    document.addEventListener('keydown', (e) => {
+                        if (e.key === 'Escape' && this.mobileMenuOpen) {
+                            this.mobileMenuOpen = false;
+                        }
+                    });
                 }
+            }
+        }
+
+        function scrollAnimation() {
+            return {
+                observe() {
+                    const observer = new IntersectionObserver(
+                        (entries) => {
+                            entries.forEach(entry => {
+                                if (entry.isIntersecting) {
+                                    entry.target.classList.add('visible');
+                                    observer.unobserve(entry.target);
+                                }
+                            });
+                        },
+                        { threshold: 0.1, rootMargin: '50px' }
+                    );
+                    observer.observe(this.$refs.element);
+                }
+            }
+        }
+
+        // Enhanced smooth scroll with Alpine
+        document.addEventListener('alpine:init', () => {
+            // Smooth scroll for all anchor links
+            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+                anchor.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    const targetId = this.getAttribute('href');
+                    if (targetId === '#') return;
+
+                    const target = document.querySelector(targetId);
+                    if (target) {
+                        const offset = 80; // Account for fixed nav
+                        const targetPosition = target.getBoundingClientRect().top + window.pageYOffset - offset;
+
+                        window.scrollTo({
+                            top: targetPosition,
+                            behavior: 'smooth'
+                        });
+                    }
+                });
             });
         });
 
         // Duplicate ticker content for infinite scroll
         const ticker = document.querySelector('.ticker');
-        ticker.innerHTML += ticker.innerHTML;
+        if (ticker) {
+            ticker.innerHTML += ticker.innerHTML;
+        }
     </script>
 </body>
 </html>
