Updated Wording and Cal.com

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
         <div class="logo">
             <img src="logo.png" alt="Collective Consopusness LLC">
         </div>
-        <a href="javascript:void(0)" class="nav-cta" data-cal-link="team/simple" data-cal-config='{"layout":"month_view"}'>Book a Call</a>
+        <a href="https://cal.com/team/simple" class="nav-cta" data-cal-link="team/simple" data-cal-config='{"layout":"month_view"}'>Book a Call</a>
 
         <!-- Mobile Menu Button -->
         <button class="mobile-menu-btn" @click="mobileMenuOpen = !mobileMenuOpen">
@@ -628,7 +628,7 @@
         <a href="#services" @click="mobileMenuOpen = false" style="display: block; padding: 1rem 0; font-size: 1.2rem; color: #000; text-decoration: none;">Services</a>
         <a href="#proof" @click="mobileMenuOpen = false" style="display: block; padding: 1rem 0; font-size: 1.2rem; color: #000; text-decoration: none;">Results</a>
         <a href="#contact" @click="mobileMenuOpen = false" style="display: block; padding: 1rem 0; font-size: 1.2rem; color: #000; text-decoration: none;">Contact</a>
-        <a href="javascript:void(0)" data-cal-link="team/simple" data-cal-config='{"layout":"month_view"}' style="display: inline-block; margin-top: 2rem; padding: 1rem 2rem; background: #000; color: #fff; border-radius: 2rem; text-decoration: none;">Book a Call</a>
+        <a href="https://cal.com/team/simple" data-cal-link="team/simple" data-cal-config='{"layout":"month_view"}' style="display: inline-block; margin-top: 2rem; padding: 1rem 2rem; background: #000; color: #fff; border-radius: 2rem; text-decoration: none;">Book a Call</a>
     </div>
     <div class="mobile-menu-overlay" :class="{'show': mobileMenuOpen}" @click="mobileMenuOpen = false"></div>
 
@@ -660,7 +660,7 @@
             <span>for your funnel</span>
         </h1>
         <p class="hero-subtitle fade-in" :class="{'visible': shown}" style="transition-delay: 0.2s">
-            Simpler stack. Clean data. 5–10% revenue lift.
+            Event‑triggered async communication follow‑ups = 5–10% revenue lift.
         </p>
         <div class="scroll-hint" x-show="shown" x-transition.duration.1000ms>Scroll to explore ↓</div>
     </section>
@@ -672,7 +672,7 @@
             <span>RevOps</span>
             <span>Lead Routing</span>
             <span>Forecasting</span>
-            <span>Data Hygiene</span>
+            <span>Event Triggers</span>
             <span>AI Agents</span>
             <span>Attribution</span>
             <span>Salesforce</span>
@@ -680,7 +680,7 @@
             <span>RevOps</span>
             <span>Lead Routing</span>
             <span>Forecasting</span>
-            <span>Data Hygiene</span>
+            <span>Async Follow-Ups</span>
             <span>AI Agents</span>
             <span>Attribution</span>
         </div>
@@ -692,12 +692,12 @@
             <div class="service-card fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">
                 <div class="service-number">01</div>
                 <h3>CRM Implementation & RevOps</h3>
-                <p>Salesforce or HubSpot configured to match your GTM motion. Clean data, aligned processes, and automation that sticks.</p>
+                <p>Salesforce or HubSpot configured to match your GTM motion. Event‑triggered, async follow‑ups across CRM and channels—automation that sticks.</p>
                 <ul class="service-details">
                     <li>Salesforce/HubSpot implementations & migrations</li>
                     <li>Lead lifecycle, routing, and SLA design</li>
                     <li>Sales/CS playbooks and workflow automation</li>
-                    <li>Data model, validation rules, and hygiene</li>
+                    <li>Event triggers, routing rules, and async workflows</li>
                 </ul>
                 <div class="service-price">$12,000+ | 2–6 weeks</div>
             </div>
@@ -743,7 +743,7 @@
     <section class="cta-section" id="contact">
         <h2>Build a CRM + AI stack that accelerates GTM</h2>
         <p>In 30 minutes, we’ll map your bottlenecks and outline a CRM/AI roadmap tailored to your team.</p>
-        <a href="javascript:void(0)" class="cta-button" data-cal-link="team/simple" data-cal-config='{"layout":"month_view"}'>Book Consultation</a>
+        <a href="https://cal.com/team/simple" class="cta-button" data-cal-link="team/simple" data-cal-config='{"layout":"month_view"}'>Book Consultation</a>
     </section>
 
     <footer>
