--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
     </script>
 
     <section class="hero" x-data="{ shown: false }" x-init="setTimeout(() => shown = true, 100)">
-        <div class="eyebrow fade-in" :class="{'visible': shown}" style="transition-delay: 0.05s">Custom AI GTM CRM</div>
+        <div class="eyebrow fade-in" :class="{'visible': shown}" style="transition-delay: 0.05s">Forward‑Deployed</div>
         <div class="unicorn-bg"
              data-us-project="YOUR_PROJECT_ID"
              data-us-scale="1"
@@ -661,11 +661,11 @@
              data-us-arialabel="Decorative animated background"
              aria-hidden="true"></div>
         <h1 :class="{'fade-in visible': shown}" class="fade-in">
-            Custom AI GTM CRM deployments
-            <span>for your funnel</span>
+            Forward‑Deployed GTM Engineers
+            <span>who ship CRM + AI that sells</span>
         </h1>
         <p class="hero-subtitle fade-in" :class="{'visible': shown}" style="transition-delay: 0.2s">
-            Event‑triggered async communication follow‑ups = 5–10% revenue lift.
+            We implement Salesforce/HubSpot, AI agents, and event‑triggered workflows—measurable lift in weeks.
         </p>
         <div class="scroll-hint" x-show="shown" x-transition.duration.1000ms>Scroll to explore ↓</div>
     </section>
@@ -692,43 +692,43 @@
     </div>
 
     <section class="services" id="services">
-        <h2 class="section-title fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">What We Do</h2>
+        <h2 class="section-title fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">Platform Details</h2>
         <div class="service-grid">
             <div class="service-card fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">
                 <div class="service-number">01</div>
-                <h3>CRM Implementation & RevOps</h3>
-                <p>Salesforce or HubSpot configured to match your GTM motion. Event‑triggered, async follow‑ups across CRM and channels—automation that sticks.</p>
+                <h3>Hands‑On Deployments</h3>
+                <p>We work directly in your stack to implement Salesforce/HubSpot, define event triggers, and wire AI agents—owning the post‑training and post‑setup work end‑to‑end.</p>
                 <ul class="service-details">
-                    <li>Salesforce/HubSpot implementations & migrations</li>
-                    <li>Lead lifecycle, routing, and SLA design</li>
-                    <li>Sales/CS playbooks and workflow automation</li>
-                    <li>Event triggers, routing rules, and async workflows</li>
+                    <li>Implementations & migrations (Salesforce/HubSpot)</li>
+                    <li>Lead lifecycle, routing and SLA design</li>
+                    <li>Agents embedded into CRM + channels</li>
+                    <li>Event triggers and async workflows</li>
                 </ul>
                 <div class="service-price">$12,000+ | 2–6 weeks</div>
             </div>
 
             <div class="service-card fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element" style="transition-delay: 0.1s">
                 <div class="service-number">02</div>
-                <h3>AI GTM Agents & Automations</h3>
-                <p>Agentic AI across inbound and outbound to accelerate pipeline—embedded into your CRM and channels.</p>
+                <h3>Reinforcement Fine‑Tuning</h3>
+                <p>We tune agents to your playbooks—tools, tone, and policies—so they stay reliable in complex multi‑step tasks.</p>
                 <ul class="service-details">
-                    <li>Speed-to-lead agents for inbound capture</li>
-                    <li>Personalized outbound sequences at scale</li>
-                    <li>Call/email summaries auto-logged to CRM</li>
-                    <li>Enrichment, scoring, and next-best action</li>
+                    <li>Multi‑turn tool use training</li>
+                    <li>Policies, tone, and guardrails</li>
+                    <li>CRM‑grounded context windows</li>
+                    <li>Offline evals and red‑team tests</li>
                 </ul>
                 <div class="service-price">$8,500+ | 1–3 weeks</div>
             </div>
 
             <div class="service-card fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element" style="transition-delay: 0.2s">
                 <div class="service-number">03</div>
-                <h3>Data & Reporting for GTM</h3>
-                <p>Unify data and unlock clarity with reliable dashboards and alerts that drive action.</p>
+                <h3>Continuous Improvement</h3>
+                <p>We integrate with your evaluations to monitor performance and auto‑retrain where it matters. Alerts and dashboards keep the loop tight.</p>
                 <ul class="service-details">
-                    <li>Pipeline and forecast accuracy dashboards</li>
-                    <li>Attribution, cohorts, and lifecycle analytics</li>
-                    <li>RevOps scorecards with real-time alerts</li>
-                    <li>Warehouse/BI integrations (GA4, BigQuery, Looker)</li>
+                    <li>Instrumentation & success metrics</li>
+                    <li>Guardrail & regression tests</li>
+                    <li>Auto‑retraining hooks</li>
+                    <li>Ops dashboard for GTM leaders</li>
                 </ul>
                 <div class="service-price">$7,500+ | 1–3 weeks</div>
             </div>
@@ -736,11 +736,19 @@
     </section>
 
     <section class="proof" id="proof">
-        <h2 class="section-title fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">The Outcome GTM Teams Care About</h2>
+        <h2 class="section-title fade-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">Use Cases</h2>
         <div class="proof-grid">
             <div class="proof-stat scale-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">
-                <div class="proof-stat-number">5–10%</div>
-                <div class="proof-stat-label">revenue lift from faster, event-triggered follow-up using website and CRM signals</div>
+                <div class="proof-stat-number">Data Extraction</div>
+                <div class="proof-stat-label">Schema‑precise capture from forms, emails, and calls straight into CRM objects.</div>
+            </div>
+            <div class="proof-stat scale-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">
+                <div class="proof-stat-number">Tool‑Use Agents</div>
+                <div class="proof-stat-label">Agents that reliably act in your stack: qualify, route, write, and log.</div>
+            </div>
+            <div class="proof-stat scale-in" x-data="scrollAnimation()" x-init="observe()" x-ref="element">
+                <div class="proof-stat-number">Code Generation</div>
+                <div class="proof-stat-label">Accelerate UI and workflow changes with domain‑specific scaffolds.</div>
             </div>
         </div>
     </section>
